--- a/Plits/blacklist.plist
+++ b/Plits/blacklist.plist
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>https://khoindvn.tk/Khoindvn.png</string>
+					<string>https://my-khoindvn.github.io/khoindvn.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -27,7 +27,7 @@
 					<key>needs-shine</key>
 					<true/>
 					<key>url</key>
-					<string>https://khoindvn.tk/Khoindvn.png</string>
+					<string>https://my-khoindvn.github.io/khoindvn.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
