--- a/conf/khoindvn.conf
+++ b/conf/khoindvn.conf
@@ -1,4 +1,3 @@
-# Shadowrocket: 2023-03-04 15:01:26
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
@@ -16,6 +15,7 @@ dns-direct-fallback-proxy = true
 
 [Rule]
 #NO REVOKE CERT BY KHOINDVN
+DOMAIN,world-gen.g.aaplimg.com,REJECT
 DOMAIN,pagead2.googlesyndication.com,REJECT
 DOMAIN,ppq-ext.v.aaplimg.com,REJECT
 DOMAIN,apple.com,REJECT
