--- a/conf/khoindvn.conf
+++ b/conf/khoindvn.conf
@@ -15,6 +15,13 @@ dns-direct-fallback-proxy = true
 
 [Rule]
 #NO REVOKE CERT BY KHOINDVN
+DOMAIN,inappcheck.itunes.apple.com,DIRECT
+DOMAIN,init-p01md.apple.com,REJECT
+DOMAIN,smp-device-content.apple.com,REJECT
+DOMAIN,ios.bugly.apple.com,REJECT
+DOMAIN,bag.itunes.apple.com,REJECT
+DOMAIN,ocsp.digicert.cn,REJECT
+DOMAIN,xp.apple.com,REJECT
 DOMAIN,world-gen.g.aaplimg.com,REJECT
 DOMAIN,pagead2.googlesyndication.com,REJECT
 DOMAIN,ppq-ext.v.aaplimg.com,REJECT
