--- a/conf/khoindvn.conf
+++ b/conf/khoindvn.conf
@@ -15,6 +15,8 @@ dns-direct-fallback-proxy = true
 
 [Rule]
 #NO REVOKE CERT BY KHOINDVN
+DOMAIN,client-api.itunes.apple.com,REJECT
+DOMAIN,init.itunes.apple.com,REJECT
 DOMAIN,inappcheck.itunes.apple.com,DIRECT
 DOMAIN,init-p01md.apple.com,REJECT
 DOMAIN,smp-device-content.apple.com,REJECT
