--- a/conf/khoindvn.conf
+++ b/conf/khoindvn.conf
@@ -28,6 +28,7 @@ DOMAIN,world-gen.g.aaplimg.com,REJECT
 DOMAIN,pagead2.googlesyndication.com,REJECT
 DOMAIN,ppq-ext.v.aaplimg.com,REJECT
 DOMAIN,apple.com,REJECT
+DOMAIN,ppq.apple.com,REJECT
 DOMAIN,ocsp.usertrust.com,REJECT
 DOMAIN,crt.usertrust.com,PROXY
 DOMAIN,crl.usertrust.com,REJECT
