--- a/conf/khoindvn.conf
+++ b/conf/khoindvn.conf
@@ -1,3 +1,4 @@
+# Shadowrocket: 2023-03-08 04:10:30
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
@@ -15,6 +16,9 @@ dns-direct-fallback-proxy = true
 
 [Rule]
 #NO REVOKE CERT BY KHOINDVN
+DOMAIN,crl.apple.com/root.crl,REJECT
+DOMAIN,crl.apple.com/root.crl0,REJECT
+DOMAIN,ocsp.apple.com/ocsp03-aipca070,REJECT
 DOMAIN,client-api.itunes.apple.com,REJECT
 DOMAIN,init.itunes.apple.com,REJECT
 DOMAIN,inappcheck.itunes.apple.com,DIRECT
