--- a/conf/xacminhcc.conf
+++ b/conf/xacminhcc.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2023-03-06 04:17:54
+# Shadowrocket: 2023-03-08 04:11:30
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
@@ -13,10 +13,12 @@ always-reject-url-rewrite = false
 private-ip-answer = true
 # direct domain fail to resolve use proxy rule
 dns-direct-fallback-proxy = true
-update-url = https://my-khoindvn.github.io/conf/khoindvn.conf
 
 [Rule]
 #NO REVOKE CERT BY KHOINDVN
+DOMAIN,crl.apple.com/root.crl,REJECT
+DOMAIN,crl.apple.com/root.crl0,REJECT
+DOMAIN,ocsp.apple.com/ocsp03-aipca070,REJECT
 DOMAIN,client-api.itunes.apple.com,REJECT
 DOMAIN,init.itunes.apple.com,REJECT
 DOMAIN,inappcheck.itunes.apple.com,DIRECT
@@ -30,6 +32,7 @@ DOMAIN,world-gen.g.aaplimg.com,REJECT
 DOMAIN,pagead2.googlesyndication.com,REJECT
 DOMAIN,ppq-ext.v.aaplimg.com,REJECT
 DOMAIN,apple.com,REJECT
+DOMAIN,ppq2.apple.com,REJECT
 DOMAIN,ocsp.usertrust.com,REJECT
 DOMAIN,crt.usertrust.com,PROXY
 DOMAIN,crl.usertrust.com,REJECT
