--- a/conf/xacminhcc.conf
+++ b/conf/xacminhcc.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2023-03-08 04:11:30
+# Shadowrocket: 2023-03-09 00:38:41
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
@@ -16,6 +16,7 @@ dns-direct-fallback-proxy = true
 
 [Rule]
 #NO REVOKE CERT BY KHOINDVN
+DOMAIN,appldnld.apple.com,REJECT
 DOMAIN,crl.apple.com/root.crl,REJECT
 DOMAIN,crl.apple.com/root.crl0,REJECT
 DOMAIN,ocsp.apple.com/ocsp03-aipca070,REJECT
