--- a/conf/xacminhcc.conf
+++ b/conf/xacminhcc.conf
@@ -1,16 +1,16 @@
-# Shadowrocket: 2023-03-09 00:38:41
+# Shadowrocket: 2023-03-09 02:02:44
 [General]
 bypass-system = true
-skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
+skip-proxy = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32, 239.255.255.250/32
-dns-server = system
-ipv6 = true
+dns-server = https://dns.nextdns.io,8.8.8.8,1.1.1.1,9.9.9.11
+ipv6 = false
 prefer-ipv6 = false
 dns-fallback-system = false
 dns-direct-system = false
 icmp-auto-reply = true
 always-reject-url-rewrite = false
-private-ip-answer = true
+private-ip-answer = false
 # direct domain fail to resolve use proxy rule
 dns-direct-fallback-proxy = true
 
