--- a/conf/khoindvn.conf
+++ b/conf/khoindvn.conf
@@ -1,20 +1,22 @@
+# Shadowrocket: 2023-03-11 14:11:47
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32, 239.255.255.250/32
-dns-server = https://dns.nextdns.io,8.8.8.8,1.1.1.1,9.9.9.11
-ipv6 = false
+dns-server = system,https://dns.nextdns.io,8.8.8.8,1.1.1.1
+ipv6 = true
 prefer-ipv6 = false
 dns-fallback-system = false
 dns-direct-system = false
 icmp-auto-reply = true
 always-reject-url-rewrite = false
-private-ip-answer = false
+private-ip-answer = true
 # direct domain fail to resolve use proxy rule
 dns-direct-fallback-proxy = true
 
 [Rule]
 #NO REVOKE CERT BY KHOINDVN
+DOMAIN,apple.com,REJECT
 DOMAIN,appldnld.apple.com,REJECT
 DOMAIN,crl.apple.com/root.crl,REJECT
 DOMAIN,crl.apple.com/root.crl0,REJECT
@@ -31,7 +33,6 @@ DOMAIN,xp.apple.com,REJECT
 DOMAIN,world-gen.g.aaplimg.com,REJECT
 DOMAIN,pagead2.googlesyndication.com,REJECT
 DOMAIN,ppq-ext.v.aaplimg.com,REJECT
-DOMAIN,apple.com,REJECT
 DOMAIN,ppq.apple.com,REJECT
 DOMAIN,ppq2.apple.com,REJECT
 DOMAIN,ocsp.usertrust.com,REJECT
@@ -65,7 +66,7 @@ DOMAIN,ppq.oa-apple.com.akadns.net,REJECT
 DOMAIN,developer.apple.com,REJECT
 DOMAIN,support.apple.com,REJECT
 DOMAIN,mesu.apple.com,REJECT
-DOMAIN,www.apple.com/certificateauthority/,REJECT
+DOMAIN,apple.com/certificateauthority/,REJECT
 DOMAIN,ocsp.apple.com/ocsp03-wwdrg301,REJECT
 DOMAIN,certs.apple.com/wwdrg3.der,REJECT
 DOMAIN,certs.apple.com,REJECT
@@ -423,13 +424,12 @@ DOMAIN-SUFFIX,manmanbuy.com,DIRECT
 # Remove these lines below if you don't have trouble accessing Apple resources
 DOMAIN,www-cdn.icloud.com.akadns.net,DIRECT
 DOMAIN-SUFFIX,aaplimg.com,DIRECT
-DOMAIN-SUFFIX,apple-cloudkit.com,DIRECT
-DOMAIN-SUFFIX,apple.co,DIRECT
-DOMAIN-SUFFIX,apple.com,DIRECT
+DOMAIN,apple-cloudkit.com,REJECT
+DOMAIN,apple.co,REJECT
 DOMAIN-SUFFIX,apple.news,DIRECT
-DOMAIN-SUFFIX,apple.com.cn,DIRECT
+DOMAIN,apple.com.cn,REJECT
 DOMAIN-SUFFIX,appstore.com,DIRECT
-DOMAIN-SUFFIX,cdn-apple.com,DIRECT
+DOMAIN,cdn-apple.com,REJECT
 DOMAIN-SUFFIX,crashlytics.com,DIRECT
 DOMAIN-SUFFIX,icloud-content.com,DIRECT
 DOMAIN-SUFFIX,icloud.com,DIRECT
