--- a/conf/khoindvn.conf
+++ b/conf/khoindvn.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2023-03-11 14:11:47
+# Shadowrocket: 2023-03-11 16:21:54
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local
@@ -13,10 +13,14 @@ always-reject-url-rewrite = false
 private-ip-answer = true
 # direct domain fail to resolve use proxy rule
 dns-direct-fallback-proxy = true
+update-url = https://my-khoindvn.github.io/conf/khoindvn.conf
 
 [Rule]
 #NO REVOKE CERT BY KHOINDVN
 DOMAIN,apple.com,REJECT
+DOMAIN,api.smoot.apple.com,REJECT
+DOMAIN,inappcheck.itunes.apple.com,REJECT
+DOMAIN,cacerts.digicert.com,REJECT
 DOMAIN,appldnld.apple.com,REJECT
 DOMAIN,crl.apple.com/root.crl,REJECT
 DOMAIN,crl.apple.com/root.crl0,REJECT
