--- a/conf/khoindvn.conf
+++ b/conf/khoindvn.conf
@@ -16,6 +16,7 @@ update-url = https://my-khoindvn.github.io/conf/khoindvn.conf
 
 [Rule]
 #NO REVOKE CERT BY KHOINDVN
+DOMAIN,dev.tencent.com,REJECT
 DOMAIN,api.smoot.apple.com,REJECT
 DOMAIN,inappcheck.itunes.apple.com,REJECT
 DOMAIN,cacerts.digicert.com,REJECT
