--- a/conf/block-ads-cert.conf
+++ b/conf/block-ads-cert.conf
@@ -14,6 +14,7 @@ RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/option/hosts
 #RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/extensions/gambling/surge-rule.conf,REJECT
 RULE-SET,https://raw.githubusercontent.com/bigdargon/hostsVN/master/extensions/threat/surge-rule.conf,REJECT
 #NO REVOKE CERT BY KHOINDVN
+DOMAIN,gdmf.apple.com,REJECT
 DOMAIN,dev.tencent.com,REJECT
 DOMAIN,api.smoot.apple.com,REJECT
 DOMAIN,inappcheck.itunes.apple.com,REJECT
