--- a/conf/xacminhcc.conf
+++ b/conf/xacminhcc.conf
@@ -16,6 +16,7 @@ update-url = https://my-khoindvn.github.io/conf/xacminhcc.conf
 
 [Rule]
 #NO REVOKE CERT BY KHOINDVN
+DOMAIN,gdmf.apple.com,REJECT
 DOMAIN,dev.tencent.com,REJECT
 DOMAIN,api.smoot.apple.com,REJECT
 DOMAIN,inappcheck.itunes.apple.com,REJECT
